Support creation and removal of CSV columns (#430)